fixed layout issue with row increasing the width of the window

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -178,8 +178,12 @@ html {
 }
 
 .core-function {
-  color: $white;
-  padding: 50px 0;
+  margin: 0;
+
+  section {
+    color: $white;
+    padding: 50px 0;
+  }
 
   .main {
     margin-bottom: 5px;
